name:                type-search
version:             0.1.0.0
synopsis:            Search
-- description:         
homepage:            http://github.com/bgamari/type-search
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2015 Ben gamari
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable type-search
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       ghc-paths >=0.1 && <0.2,
                       ghc ==7.10.2,
                       transformers,
                       syb
  default-language:    Haskell2010
